# rmpc

./: Cargo.toml  README.md
src/: draw.rs  gauge.rs  input.rs  main.rs  play.rs  search.rs  state.rs
src/mpd/: mod.rs  search.rs
src/terminal/: draw.rs  input.rs  mod.rs
