[package]
name = "rmpc"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "0.0.12"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
crossterm = "0.17.7"
anyhow = "1.0.32"
rand = "0.7.3"
log = "0.4.11"
simple_logger = "1.6.0"
structopt = "0.3.15"
