[package]
name = "rmpc"
version = "0.2.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.17.7", features = ['event-stream'] }
anyhow = "1.0.32"
log = "0.4.11"
structopt = "0.3.15"
async-mpd = "0.3"
async-std = { version = "1.6.3", default-features = false, features = ['attributes', 'unstable'] }
simple-logging = "2.0.2"
directories-next = "1.0.1"

[profile.release]
debug = true
